--- a/scss/_panel-elements.scss
+++ b/scss/_panel-elements.scss
@@ -559,6 +559,7 @@ body.info-expanded .container {
         display: block;
         position: fixed;
         width: 100vw;
+        height: $sidebar-menu-height-mobile;
         border-radius: 0;
         padding: 0;
         background: unset;
@@ -608,6 +609,7 @@ body.info-expanded .container {
 
     body.menu-expanded .sidebar-menu {
         width: 100vw;
+        height: 100dvh;
 
         .sidebar-menu__nav{
             visibility: visible;
